#4 그룹 생성 API구현
